--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
                 <h1>Olá, Sou <span class="nomeOutraCor">Paulo Silva</span></h1>
                 <p>Focado na construção de sistemas bem estruturados e <br>soluções de software voltadas a aplicações digitais.</p>
                 <div class="btnBanner"><button  id="btnBanner01">Ver Projetos</button><button id="btnBanner02">Baixar currículo</button></div>
-                <div class="linksContato"><a href="https://www.linkedin.com/in/paulosilva09"><ion-icon name="logo-linkedin"></ion-icon></a><a href="https://github.com/PauloSilva09"><ion-icon name="logo-github"></ion-icon></a><a href=""><ion-icon name="mail"></ion-icon></a></div>
+                <div class="linksContato">
+                    <a href="https://www.linkedin.com/in/paulosilva09"><ion-icon name="logo-linkedin"></ion-icon></a>
+                    <a href="https://github.com/PauloSilva09"><ion-icon name="logo-github"></ion-icon></a>
+                    <a href="mailto:paulossilvas09@gmail.com"><ion-icon name="mail"></ion-icon></a>
+                </div>
             </div>
         </div>
     </main>
