--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="src/CSS/style.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="I.JS"></script>
 </head>
 <body>
 
@@ -18,9 +19,9 @@
                 <div class="logo"><a href="index.html"><img src="src/Imgs/Logo_Portifolio.png" alt="Logo_Portfolio"></a></div>    
                 <nav>
                     <ul>
-                        <a href="#projetos">Projetos</a>
-                        <a href="#skills">Skills</a>
-                        <a href="">Contato</a>
+                        <li><a href="#projetos">Projetos</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="">Contato</a></li>
                     </ul>
                 </nav>
             </div>
@@ -33,7 +34,10 @@
                 <span>Desenvolvedor Back-End</span>
                 <h1>Olá, Sou <span class="nomeOutraCor">Paulo Silva</span></h1>
                 <p>Focado na construção de sistemas bem estruturados e <br>soluções de software voltadas a aplicações digitais.</p>
-                <div class="btnBanner"><button  id="btnBanner01">Ver Projetos</button><button id="btnBanner02">Baixar currículo</button></div>
+                <div class="btnBanner">
+                    <a href="#projetos"><button  id="btnBanner01">Ver Projetos</button></a>
+                    <a href="src/Files/Currículo Paulo Silva.pdf" download="btnBaixaCurriculo"><button id="btnBaixaCurriculo">Baixar currículo</button></a>
+                </div>
                 <div class="linksContato">
                     <a href="https://www.linkedin.com/in/paulosilva09"><ion-icon name="logo-linkedin"></ion-icon></a>
                     <a href="https://github.com/PauloSilva09"><ion-icon name="logo-github"></ion-icon></a>
@@ -52,31 +56,25 @@
                 </div>
                 <div class="gradeProjetos">
                     <div class="cardProjeto">
-                        <img src="src/imgs/271346-o-que-e-e-como-funciona-o-gerenciamento-de-integracao-de-projetos-9c3f54eb.jpeg" alt="">
+                        <img src="src/Imgs/Banner Projeto CRUD PHP.png" alt="">
                         <div class="conteudoCardProjeto">
-                            <h1>Titulo</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferend</p>
+                            <h1>Sistema de Inventário Patrimonial (CRUD em PHP)</h1>
+                            <p>Sistema web em PHP com HTML e CSS para controle e gerenciamento de bens patrimoniais.</p>
                             <div class="tecnologiasCardProjeto">
                                 <span>PHP</span>
-                                <span>JavaScript</span>
                                 <span>HTML</span>
                                 <span>CSS</span>
-                                <span>SQL</span>
                                 <span>SQL</span>
                             </div>
                         </div>
                     </div>
                     <div class="cardProjeto">
-                        <img src="src/imgs/271346-o-que-e-e-como-funciona-o-gerenciamento-de-integracao-de-projetos-9c3f54eb.jpeg" alt="">
+                        <img src="src/Imgs/Banner Projeto CRUD C.png" alt="">
                         <div class="conteudoCardProjeto">
-                            <h1>Titulo</h1>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perferend</p>
+                            <h1>Sistema de Listagem de Filmes (CRUD em C# Windows Forms)</h1>
+                            <p>Aplicação desktop em C# Windows Forms para gerenciamento de filmes.</p>
                             <div class="tecnologiasCardProjeto">
-                                <span>PHP</span>
-                                <span>JavaScript</span>
-                                <span>HTML</span>
-                                <span>CSS</span>
-                                <span>SQL</span>
+                                <span>C#</span>
                                 <span>SQL</span>
                             </div>
                         </div>
@@ -109,7 +107,14 @@
                     <p>Tecnologias e ferramentas que utilizo para construir soluções robustas e escaláveis.</p>
                 </div>
                 <div class="gradeSkills">
-                    <div></div>
+                    <div><img src="src/Imgs/Csharp-logo.png" alt="Csharp-logo"></div>
+                    <div><img src="src/Imgs/CSS3-logo.png" alt="CSS3-logo"></div>
+                    <div><img src="src/Imgs/HTML5-logo.png" alt="HTML5-logo"></div>
+                    <div><img src="src/Imgs/javascript-logo.png" alt="JavaScript-logo"></div>
+                    <div><img src="src/Imgs/PHP-logo.png" alt="PHP-logo"></div>
+                    <div><img src="src/Imgs/Sql_data_base_with_logo.png" alt="SQL-logo"></div>
+                   
+
                 </div>
             </div>
         </div>
