--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="cardProjeto">
+                    <!-- <div class="cardProjeto">
                         <img src="src/imgs/271346-o-que-e-e-como-funciona-o-gerenciamento-de-integracao-de-projetos-9c3f54eb.jpeg" alt="">
                         <div class="conteudoCardProjeto">
                             <h1>Titulo</h1>
@@ -93,7 +93,7 @@
                                 <span>SQL</span>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
