--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio Paulo Silva</title>
     <link rel="shortcut icon" href="src/Imgs/Logo_Portifolio.png" type="image/x-icon">
     <link rel="stylesheet" href="src/CSS/style.css">
+    <link rel="stylesheet" href="src/CSS/mobile.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="I.JS"></script>
