--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul>
                         <li><a href="#projetos">Projetos</a></li>
                         <li><a href="#skills">Skills</a></li>
-                        <li><a href="">Contato</a></li>
+                        <!-- <li><a href="">Contato</a></li> -->
                     </ul>
                 </nav>
             </div>
