--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p>Focado na construção de sistemas bem estruturados e <br>soluções de software voltadas a aplicações digitais.</p>
                 <div class="btnBanner">
                     <a href="#projetos"><button  id="btnBanner01">Ver Projetos</button></a>
-                    <a href="src/Files/Currículo Paulo Silva.pdf" download="btnBaixaCurriculo"><button id="btnBaixaCurriculo">Baixar currículo</button></a>
+                    <a href="src/Files/Currículo Paulo Silva.pdf" download="Currículo Paulo Silva"><button id="btnBaixaCurriculo">Baixar currículo</button></a>
                 </div>
                 <div class="linksContato">
                     <a href="https://www.linkedin.com/in/paulosilva09"><ion-icon name="logo-linkedin"></ion-icon></a>
