alteraçao na area de Projetos

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
                 </div>
                 <div class="gradeProjetos">
                     <div class="cardProjeto">
-                        <img src="src/Imgs/Banner Projeto CRUD PHP.png" alt="">
+                        <div class="capaProjeto" style="background-image: url(./src/Imgs/Banner\ Projeto\ CRUD\ PHP.png);">
+                            <a href="src/Files/Crud PHP.zip" download="Projeto-CRUD-PHP-PauloSilva"><button>Baixar Projeto</button></a>
+                        </div>
                         <div class="conteudoCardProjeto">
                             <h1>Sistema de Inventário Patrimonial (CRUD em PHP)</h1>
                             <p>Sistema web em PHP com HTML e CSS para controle e gerenciamento de bens patrimoniais.</p>
@@ -70,7 +72,9 @@
                         </div>
                     </div>
                     <div class="cardProjeto">
-                        <img src="src/Imgs/Banner Projeto CRUD C.png" alt="">
+                        <div class="capaProjeto" style="background-image: url(./src/Imgs/Banner\ Projeto\ CRUD\ C.png);">
+                            <a href="src/Files/Crud C#.zip" download="Projeto-CRUD-C#-PauloSilva"><button>Baixar Projeto</button></a>
+                        </div>
                         <div class="conteudoCardProjeto">
                             <h1>Sistema de Listagem de Filmes (CRUD em C# Windows Forms)</h1>
                             <p>Aplicação desktop em C# Windows Forms para gerenciamento de filmes.</p>
